scss/style.scss
@import "reset";
@import "colors";
@import "mixins";

html {
	font-size: 16px;
	font-family: 'Open Sans', sans-serif;
}

header {
	background: url("../img/bg-large.jpg") no-repeat center;
	background-size: cover;
	background-attachment: fixed;
	height: 100vh;
	width: 100%;
	position: relative;

	@include tablet {
		background-image: url("../img/bg-medium.jpg");
	}

	@include mobile {
		background-image: url("../img/bg-small.jpg");
		background-attachment: scroll;
		height: 500px;
	};

	.hamburger {
		display: none;
		position: absolute;
		cursor: pointer;
		top: 8px;
		left: 10px;
		width: 35px;
		height: 27px;
		background-color: transparent;
		border: none;
		border-top: 5px solid $white - 40;
		transition: transform 0.3s linear;
		text-indent: 100px;
		overflow: hidden;

		@include mobile {
			display: block;
		};

		&:focus {
			border-top: 5px solid $white - 100;
			outline: none;

			&:before, &:after {
				border-top: 5px solid $white - 100;
			}
		}

		&:before, &:after {
			content: "";
			display: block;
			top: 0;
			left: 0;
			top: 6px;
			width: 100%;
			border-top: 5px solid $white - 40;
			position: absolute;
		}

		&:after {
			top: 17px;
		}
	}

	.menu {
		z-index: 2;
		position: fixed;
		left: 50%;
		transform: translateX(-50%);
		background-color: rgba($black + 50, 0.9);
		box-shadow: 1px 1px 10px rgba($black, 0.8);
		border-bottom-right-radius: 6px;
		border-bottom-left-radius: 6px;

		@include tablet {
			left: 0;
			transform: none;
			width: 100%;
			border-radius: 0;
		};

		@include mobile {
			padding-top: 44px;
			height: 0;
			overflow: hidden;

			&.open {
				background-color: rgba($black + 50, 0.9);
				width: 100%;
				height: auto;
			}
		}


		ul {
			text-align: center;
		}

		li {
			display: inline-block;
			border-left: none;

			@include mobile {
				display: block;
			};

			&:first-child {
				border-bottom-left-radius: 6px;
			}
			&:last-child {
				border-bottom-right-radius: 6px;
			}
			&:hover {
				background-color: rgba($black, 0.15);
			}
		}

		a {
			display: block;
			text-decoration: none;
			color: $white;
			padding: 15px;
			font-size: 1.2rem;
			position: relative;
		}
	}

	.socials {
		top: 100px;
		z-index: 1;
		position: fixed;
		right: 0px;

		@include mobile {
			display: none;
		};

		li {
			display: block;
			margin-top: 5px;
			position: relative;
			right: -140px;
			transition: right 0.5s ease;
			&:hover {
				right: -25px;
			}
		}

		a {
			width: 180px;
			overflow: hidden;
			border-bottom-left-radius: 15px;
			border-top-left-radius: 15px;
			display: inline-block;
			text-decoration: none;
			text-indent: 20px;
			box-sizing: border-box;
			padding: 5px 8px;
			color: $white;
			&:before {
				font-size: 1.7rem;
				float: left;
				text-indent: 0px;
			}
			&.fa {
				font-size: 1.7rem;
			}
			&.fa-facebook {
				border: 1px solid rgba($fb - 50, 80%);
				padding-left: 10px;
				background-color: $fb;
			}
			&.fa-github {
				border: 1px solid #2B2B2B;
				text-indent: 30px;
				background-color: $black;
			}
			&.fa-linkedin {
				border: 1px solid rgba($linked - 50, 80%);
				background-color: $linked;
			}
		}

		span {
			font-family: 'Nunito', sans-serif;
			font-size: 1.4rem;
		}
	}

	.site-title {
		height: 100%;
		display: flex;
		align-items: center;
		justify-content: center;

		h1 {
			padding: 0 10px;
			color: $white;
			display: inline-block;
			text-align: center;
			font-family: 'Nunito', sans-serif;
			letter-spacing: 1px;
			font-size: 5rem;
			text-shadow: 1px 1px 5px $black, 1px 1px 20px $black;

			@include tablet {
				font-size: 4rem;
			};

			@include mobile {
				font-size: 3rem;
			};
		}

		strong {
			display: block;
			margin-top: 15px;
		}
	}
}

main {
	h2 {
		font-family: 'Nunito', sans-serif;
		font-size: 2rem;
		margin-bottom: 30px;
	}

	.section-container {
		width: 90%;
		max-width: 1300px;
		margin: 0 auto;
		padding: 50px 0;
	}
}

#o-mnie {
	background-color: $section1;
	border-top: 1px solid $section1 - 30;
	border-bottom: 1px solid $section1 - 30;

	.about {
		background-color: rgba($white, 0.8);
		padding: 20px;
		border-radius: 20px;
		box-shadow: 2px 2px 20px -5px;
		margin: 0 20px;
		display: flex;
		justify-content: center;

		@include mobile {
			align-items: center;
			flex-direction: column;
			margin: 0;
		};
	}

	img {
		margin: 10px 0;
		width: 170px;
		height: 170px;
		border-radius: 100%;
		border: 2px solid $white;
		box-shadow: 0 0 10px $black;
	}

	.text-container {
		margin-left: 30px;
		padding: 30px 0;

		@include mobile {
			margin-left: 0;
		};
		span {
			font-weight: 600;
		}

		strong {
			font-weight: 600;
		}
	}

	p {
		margin-bottom: 15px;
		line-height: 22px;
		&:last-child {
			margin-bottom: 0;
		}
	}

	.skills {
		margin-top: 50px;

		h3 {
			font-size: 1.5rem;
			text-align: center;
			margin-bottom: 15px;
		}

		.skills-container {
			font-size: 1.2rem;
			margin: 0 auto;
			display: flex;
			justify-content: center;
			flex-wrap: wrap;
			max-width: 450px;
		}

		li {
			color: $white;
			padding: 10px 20px;
			margin: 5px;
			cursor: pointer;
			&:nth-child(5n) {
				@include tile($blue);
			}
			&:nth-child(5n+1) {
				@include tile($orange);
			}
			&:nth-child(5n+2) {
				@include tile($green);
			}
			&:nth-child(5n+3) {
				@include tile($red);
			}
			&:nth-child(5n+4) {
				@include tile($purple);
			}
		}
	}
}

#projekty {
	background-color: $section2;
	border-bottom: 1px solid $section2 - 30;

	.projects-container {
		display: flex;
		justify-content: center;
		flex-wrap: wrap;
	}

	.project {
		position: relative;
		margin: 20px;
		border: 1px solid black;
		box-shadow: 0 0 20px rgba($black, 0.5);
		&:hover .project-mask{
			visibility: visible;
			opacity: 0.95;
		}

		@include mobile {
			margin: 25px 0px;
		};
	}

	.project-mask {
		position: absolute;
		top: 0;
		left: 0;
		background-color: $black;
		width: 100%;
		height: 100%;
		opacity: 0;
		display: none;
		visibility: hidden;
		transition: visibility 0.5s, 	opacity 0.5s;
		display: flex;
		flex-direction: column;
	}

	img {
		width: 100%;
		height: 100%;
	}

	h3 {
		color: $white;
		text-align: center;
		margin-top: 20px;
		font-family: 'Nunito', sans-serif;
		font-size: 2rem;
		padding: 10px;
		background-color: $blue;
		height: 30px;

		@include mobile {
			margin-top: 10px;
			font-size: 1.3rem;
		};
	}

	p {
		font-size: 1.3rem;
		text-align: center;
		box-sizing: border-box;
		margin-top: 8%;
		color: $white;

		@include mobile {
			padding: 0 5px;
			margin-top: 6%;
			font-size: 1rem;
		};
	}

	.links-container {
		height: 100%;
		overflow: hidden;
		display: flex;
	}

	a {
		height: 100%;
		text-decoration: none;
		color: $white;
		text-align: center;
		width: 100%;
		display: flex;
		justify-content: space-around;
		align-items: center;
		&:hover span {
			color: $blue + 30;
		}
	}

	span {
		font-size: 1.3rem;

		@include mobile {
			font-size: 1.1rem;
		};
		&.fa:before {
			margin-bottom: 5px;
			display: block;
			font-size: 4rem;

			@include mobile {
				font-size: 2.5rem;
			};
		}
	}
}

#kontakt {
	background-color: $section3;

	.contact-container {
		display: flex;
		justify-content: space-around;
		flex-wrap: wrap;
	}

	.contact-info {
		background-color: rgba($white, 0.8);
		box-shadow: 2px 2px 10px rgba($black, 0.6);
		margin: 20px 10px 0 0;
		box-sizing: border-box;
		padding: 10px 15px;
		align-self: flex-start;
		font-size: 1.5rem;
		border-radius: 20px;

		@include tablet {
			margin: 20px 20px 50px;
			padding: 10px 2%;
		};

		&:before {
			color: rgba($black, 0.4);
			font-size: 2rem;
			text-align: right;
			display: block;
			padding: 0 10px;
		}

		.contact-text {
			display: block;
			font-family: 'Open Sans', sans-serif;
			text-decoration: none;
			color: $black;
			line-height: 3rem;

			@include mobile {
				font-size: 1.2rem;
				letter-spacing: -1px;
			};

			&:before {
				text-indent: -10px;
				text-align: center;
				font-family: 'FontAwesome';
				display: inline-block;
				font-size: 2rem;
				width: 50px;

				@include mobile {
					text-indent: 0;
					width: 30px;
					font-size: 1.3rem;
				}
			}
		}
	}

	form {
		width: 500px;

		label {
			font-size: 1.3rem;
			line-height: 2.5rem;
		}

		.field {
			box-sizing: border-box;
			font-family: 'Open Sans', sans-serif;
			border-radius: 10px;
			border: 1px solid $field - 60;
			font-size: 1rem;
			display: block;
			padding: 10px;
			width: 100%;
			&:focus {
				outline: none;
				border-color: $skyblue - 20;
			}
		}

		button {
			display: block;
			margin: 30px auto 20px auto;
			border: none;
			background-color: $skyblue;
			border-radius: 6px;
			color: $white;
			font-size: 1.4rem;
			padding: 10px;
			width: 200px;
			cursor: pointer;
			&:hover {
				background-color: $skyblue - 30;
			}
		}
	}
}

footer {
	background-color: #242729;
	color: $white - 70;
	text-align: center;
	padding: 20px;
	line-height: 1.3rem;

	ul {
		display: none;
		margin-bottom: 10px;

		@include mobile {
			display: block;
		};
	}

	li {
		display: inline-block;
	}

	a {
		margin: 0 10px;
		display: inline-block;
		text-indent: 60px;
		width: 30px;
		overflow: hidden;
		color: $white;

		&:before {
			text-indent: 0;
			float: left;
			font-size: 2rem;
		}
	}
}

